welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:31: error: not found: value getPos
  while (getPos()!=(getMondeLargeur()-1,getMondeHauteur()-1)){
         ^